# time-tracker-tui

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  db.rs  events.rs  main.rs  ui.rs
