[package]
name = "time_tracker"
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 2

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
ratatui = "0.30.2"
crossterm = "0.29.0"
rusqlite = "0.40.1"
chrono = "0.4.45"
thiserror = "2.0.18"
directories = "6.0.0"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
too_many_lines = "allow"
uninlined_format_args = "allow"